refactor: only build and package once for all examples

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -15,11 +15,24 @@ concurrency:
 jobs:
   build-example-matrix:
     runs-on: ubuntu-latest
+    container:
+      image: docker.mirror.hashicorp.services/hashicorp/jsii-terraform
     outputs:
       examples: ${{ steps.set-examples.outputs.examples }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: install dependencies
+        run: yarn install
+      - name: build and package
+        run: |
+          yarn build
+          yarn package
+      - name: Upload dist
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
       - id: set-examples
         run: |
           tfDefault=$(cat .terraform.versions.json | jq -r '.default')
@@ -40,16 +53,14 @@ jobs:
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v2
+      - name: Download dist
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
       - name: installing dependencies
         run: |
           yarn install
-      - name: compile
-        run: |
-          yarn build
-        env:
-          TERRAFORM_BINARY_NAME: "terraform${{ matrix.terraform }}"
-      - name: create bundle
-        run: yarn package
       - name: examples integration tests
         run: test/run-against-dist tools/build-examples.sh ${TEST_TARGET}
         env:
