fix(examples): ensure example names match their directory names

--- a/examples/typescript/azure-service-bus-queue-trigger/package.json
+++ b/examples/typescript/azure-service-bus-queue-trigger/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-bus-queue-trigger",
+  "name": "@examples/typescript-azure-service-bus-queue-trigger",
   "version": "1.0.0",
   "main": "main.js",
   "types": "main.ts",
