--- a/.prettierignore
+++ b/.prettierignore
@@ -13,3 +13,4 @@ packages/@cdktf/provider-generator/edge-provider-bindings
 test/edge-provider-bindings
 !tools/documentation-generation/generate-documentation.js
 !tools/build-example.js
+!tools/lint-examples.js
