--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:update": "npx lerna exec --parallel --no-bail --scope 'cdktf*' --scope '@cdktf/*' npx 'jest -u'",
     "watch": "lerna run --parallel  --stream --scope @cdktf/* --scope 'cdktf*' watch-preserve-output",
     "lint:workspace": "eslint .",
+    "lint:examples": "node tools/lint-examples.js",
     "link-packages": "lerna exec --scope 'cdktf*' --scope @cdktf/* yarn link",
     "integration": "cd test && yarn edge:install && ./run-against-dist npx jest --runInBand",
     "integration:update": "cd test && yarn && yarn edge:install && NODE_OPTIONS='--max-old-space-size=7168' ./run-against-dist npx jest -u --runInBand",
@@ -87,6 +88,7 @@
   "lint-staged": {
     "packages/cdktf/**": "yarn generate-docs:api",
     "examples/*/documentation/**": "yarn generate-docs:translations",
+    "examples/**": "yarn lint:examples",
     "**/*.{ts,tsx,js,css,md}": "prettier --write"
   },
   "eslintConfig": {
